--- a/style.scss
+++ b/style.scss
@@ -73,6 +73,9 @@ button {
     border: 0;
     width: 100%;
     gap: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
 
   .sidebar-content {
@@ -82,8 +85,8 @@ button {
     line-height: 1.25rem;
     padding: 12px;
     display: flex;
+    gap: 15px;
     align-items: center;
-    justify-content: space-between;
 
     .chat-text {
       line-height: 0.75rem;
@@ -95,13 +98,14 @@ button {
       overflow: hidden;
       max-height: 1.25rem;
       position: relative;
+      right: 15px;
     }
   }
 
   .buttons {
     display: flex;
     color: #d1d5db;
-    
+
     .delete-button {
       color: #a3a3a3;
       background-color: transparent;
