--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ button {
   cursor: pointer;
   display: flex;
   align-items: center;
+  background: transparent;
 }
 
 .sidebar {
@@ -43,28 +44,41 @@ button {
 }
 .sidebar .newchat-button {
   background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.2);
   width: 100%;
   display: flex;
   flex-shrink: 0;
   justify-content: flex-start;
   align-items: center;
   gap: 8px;
+  font-size: 15px;
+  font-family: inherit;
 }
 .sidebar .newchat-button:hover {
-  background-color: #353131;
+  background-color: rgba(107, 114, 128, 0.1019607843);
 }
 .sidebar .sidebar-search {
   position: relative;
   margin-top: 8px;
 }
 .sidebar .sidebar-search .search-input {
+  border: 1px solid rgba(255, 255, 255, 0.2);
   width: 100%;
+  font-size: 14px;
+  line-height: 12px;
   color: #ffffff;
   background-color: transparent;
   padding: 12px 40px 12px 16px;
 }
+.sidebar .sidebar-search .search-input::-moz-placeholder {
+  color: rgb(236, 234, 234);
+  opacity: 0.5;
+}
+.sidebar .sidebar-search .search-input::placeholder {
+  color: rgb(236, 234, 234);
+  opacity: 0.5;
+}
 .sidebar .chat {
-  background-color: rgba(52, 53, 65, 0.9019607843);
   border: 0;
   width: 100%;
   gap: 10px;
@@ -72,43 +86,40 @@ button {
   align-items: center;
   justify-content: space-between;
 }
+.sidebar .chat:hover {
+  background-color: rgba(52, 53, 65, 0.9019607843);
+  cursor: pointer;
+}
 .sidebar .sidebar-content {
-  border: 1px solid rgba(255, 255, 255, 0.2);
   border-radius: 5px;
-  font-size: 14px;
   line-height: 1.25rem;
   padding: 12px;
   display: flex;
-  gap: 15px;
+  gap: 13px;
   align-items: center;
 }
 .sidebar .sidebar-content .chat-text {
-  line-height: 0.75rem;
-  font-size: 12.5px;
+  line-height: 14px;
+  font-size: 13px;
   padding-right: 3rem;
   word-break: break-all;
   white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  max-height: 1.25rem;
   position: relative;
-  right: 15px;
+  right: 5px;
 }
 .sidebar .buttons {
   display: flex;
-  color: #d1d5db;
 }
 .sidebar .buttons .delete-button {
   color: #a3a3a3;
   background-color: transparent;
   border: none;
   cursor: pointer;
-  font-size: 16px;
-  padding: 5px;
+  padding: 3px;
   border-radius: 5px;
 }
 .sidebar .buttons .delete-button:hover {
-  background-color: #c0392b;
+  color: #ffffff;
 }
 .sidebar .chat-conversion {
   margin-top: 20px;
@@ -125,6 +136,22 @@ button {
   display: flex;
   align-items: center;
   position: relative;
+}
+.sidebar .chat-conversion .no-data-message {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  color: white;
+  opacity: 0.5;
+  margin-top: 32px;
+}
+.sidebar .chat-conversion .no-data-size {
+  margin-bottom: 12px;
+}
+.sidebar .chat-conversion .no-data-text {
+  line-height: 24px;
+  font-size: 14px;
 }
 
 .conversation-handler {
@@ -158,20 +185,13 @@ header {
 
 .heading {
   justify-content: space-between;
-  background-color: #444654;
   color: #ffffff;
-  padding: 0 16px;
+  padding: 0 10px;
   height: 40px;
 }
 
-.close-button {
-  display: flex;
-  align-items: flex-start;
-  justify-content: end;
-  text-decoration: none;
-  color: white;
-  padding: 5px 16px;
-  transition: 0.3s;
+.title-heading {
+  font-weight: 600;
 }
 
 .hidden-part {
@@ -183,7 +203,7 @@ header {
 }
 
 .chat-box {
-  max-width: 640px;
+  max-width: 750px;
   padding: 20px;
   margin: 0 auto;
   padding-bottom: 200px;
@@ -209,6 +229,8 @@ header {
 .chat-box .messages-text .profile-icon {
   height: 30px;
   width: 30px;
+  position: relative;
+  top: 3px;
 }
 .chat-box .messages .message-and-icon,
 .chat-box .messages-text .message-and-icon {
@@ -245,18 +267,22 @@ header {
   margin: 0 auto;
 }
 .sticky-part .chat-input-container .parent-chat-box {
-  padding: 12px;
   color: #a1a1aa;
+  margin: 0 20px;
 }
 .sticky-part .chat-input-container .parent-chat-box .chat-input {
   border-radius: 6px;
   display: flex;
   align-items: center;
   padding: 12px;
+  height: 44px;
   background-color: #40414f;
-  border: none;
+  border: 1px solid rgba(17, 24, 39, 0.5019607843);
   color: white;
   box-shadow: 0 0 rgba(0, 0, 0, 0), 0 0 rgba(0, 0, 0, 0), 0 0 15px rgba(0, 0, 0, 0.1019607843);
+}
+.sticky-part .chat-input-container .parent-chat-box .chat-input:focus-within {
+  border: 1px solid white;
 }
 .sticky-part .chat-input-container .parent-chat-box .chat-input textarea {
   flex: 1;
@@ -270,6 +296,7 @@ header {
   outline: 0;
   overflow-y: hidden;
   height: 22px;
+  font-family: inherit;
 }
 .sticky-part .chat-input-container .parent-chat-box .chat-input .button-send {
   background: transparent;
@@ -277,17 +304,15 @@ header {
   padding: 5px 8px;
 }
 .sticky-part .chat-input-container .parent-chat-box .parent-box-text {
-  margin: auto;
-  display: flex;
-  justify-content: center;
-  margin-top: 15px;
+  text-align: center;
   line-height: 16px;
-  font-size: 0.75rem;
-  padding: 0 10px;
+  font-size: 12px;
+  line-height: 14px;
+  padding: 12px 16px 24px;
 }
 
-@media (min-width: 640px) {
+@media (min-width: 750px) {
   .chat-input-container {
-    max-width: 640px;
+    max-width: 750px;
   }
 }/*# sourceMappingURL=style.css.map */
