--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ button {
   flex-direction: column;
   left: 0;
 }
+
 .sidebar .newchat-button {
   background-color: transparent;
   border: 1px solid rgba(255, 255, 255, 0.2);
@@ -54,13 +55,16 @@ button {
   font-size: 15px;
   font-family: inherit;
 }
+
 .sidebar .newchat-button:hover {
   background-color: rgba(107, 114, 128, 0.1019607843);
 }
+
 .sidebar .sidebar-search {
   position: relative;
   margin-top: 8px;
 }
+
 .sidebar .sidebar-search .search-input {
   border: 1px solid rgba(255, 255, 255, 0.2);
   width: 100%;
@@ -70,14 +74,17 @@ button {
   background-color: transparent;
   padding: 12px 40px 12px 16px;
 }
+
 .sidebar .sidebar-search .search-input::-moz-placeholder {
   color: rgb(236, 234, 234);
   opacity: 0.5;
 }
+
 .sidebar .sidebar-search .search-input::placeholder {
   color: rgb(236, 234, 234);
   opacity: 0.5;
 }
+
 .sidebar .chat {
   border: 0;
   width: 100%;
@@ -86,10 +93,12 @@ button {
   align-items: center;
   justify-content: space-between;
 }
+
 .sidebar .chat:hover {
   background-color: rgba(52, 53, 65, 0.9019607843);
   cursor: pointer;
 }
+
 .sidebar .sidebar-content {
   border-radius: 5px;
   line-height: 1.25rem;
@@ -98,6 +107,7 @@ button {
   gap: 13px;
   align-items: center;
 }
+
 .sidebar .sidebar-content .chat-text {
   line-height: 14px;
   font-size: 13px;
@@ -107,9 +117,11 @@ button {
   position: relative;
   right: 5px;
 }
+
 .sidebar .buttons {
   display: flex;
 }
+
 .sidebar .buttons .delete-button {
   color: #a3a3a3;
   background-color: transparent;
@@ -118,9 +130,11 @@ button {
   padding: 3px;
   border-radius: 5px;
 }
+
 .sidebar .buttons .delete-button:hover {
   color: #ffffff;
 }
+
 .sidebar .chat-conversion {
   margin-top: 20px;
   overflow: auto;
@@ -132,11 +146,13 @@ button {
   flex-direction: column;
   width: 100%;
 }
+
 .sidebar .chat-conversion .button-division {
   display: flex;
   align-items: center;
   position: relative;
 }
+
 .sidebar .chat-conversion .no-data-message {
   display: flex;
   justify-content: center;
@@ -146,9 +162,11 @@ button {
   opacity: 0.5;
   margin-top: 32px;
 }
+
 .sidebar .chat-conversion .no-data-size {
   margin-bottom: 12px;
 }
+
 .sidebar .chat-conversion .no-data-text {
   line-height: 24px;
   font-size: 14px;
@@ -164,6 +182,7 @@ button {
   font-size: 0.875rem;
   line-height: 1.25rem;
 }
+
 .conversation-handler .fixed-button {
   color: #ffffff;
   background-color: transparent;
@@ -208,10 +227,12 @@ header {
   margin: 0 auto;
   padding-bottom: 200px;
 }
+
 .chat-box .chatbot-message,
 .chat-box .user-message {
   color: white;
 }
+
 .chat-box .messages,
 .chat-box .messages-text {
   display: flex;
@@ -219,12 +240,14 @@ header {
   justify-content: start;
   width: 100%;
 }
+
 .chat-box .messages .messages-text,
 .chat-box .messages-text .messages-text {
   margin-left: 25px;
   font-size: 16px;
   color: #d1d5db;
 }
+
 .chat-box .messages .profile-icon,
 .chat-box .messages-text .profile-icon {
   height: 30px;
@@ -232,18 +255,21 @@ header {
   position: relative;
   top: 3px;
 }
+
 .chat-box .messages .message-and-icon,
 .chat-box .messages-text .message-and-icon {
   display: flex;
   align-items: center;
   width: 100%;
 }
+
 .chat-box .messages .message-and-icon .copy-icon,
 .chat-box .messages-text .message-and-icon .copy-icon {
   background-color: #171717;
   width: 20px;
   height: 20px;
 }
+
 .chat-box .horizontal-line {
   margin: 18px 0;
   width: 100%;
@@ -262,14 +288,17 @@ header {
   margin-left: inherit;
   background: linear-gradient(transparent, #343541, #343541);
 }
+
 .sticky-part .chat-input-container {
   transition: 0.4s;
   margin: 0 auto;
 }
+
 .sticky-part .chat-input-container .parent-chat-box {
   color: #a1a1aa;
   margin: 0 20px;
 }
+
 .sticky-part .chat-input-container .parent-chat-box .chat-input {
   border-radius: 6px;
   display: flex;
@@ -281,9 +310,11 @@ header {
   color: white;
   box-shadow: 0 0 rgba(0, 0, 0, 0), 0 0 rgba(0, 0, 0, 0), 0 0 15px rgba(0, 0, 0, 0.1019607843);
 }
+
 .sticky-part .chat-input-container .parent-chat-box .chat-input:focus-within {
   border: 1px solid white;
 }
+
 .sticky-part .chat-input-container .parent-chat-box .chat-input textarea {
   flex: 1;
   color: #fff;
@@ -298,11 +329,13 @@ header {
   height: 22px;
   font-family: inherit;
 }
+
 .sticky-part .chat-input-container .parent-chat-box .chat-input .button-send {
   background: transparent;
   opacity: 0.5;
   padding: 5px 8px;
 }
+
 .sticky-part .chat-input-container .parent-chat-box .parent-box-text {
   text-align: center;
   line-height: 16px;
@@ -315,4 +348,6 @@ header {
   .chat-input-container {
     max-width: 750px;
   }
-}/*# sourceMappingURL=style.css.map */
+}
+
+/*# sourceMappingURL=style.css.map */
