--- a/style.scss
+++ b/style.scss
@@ -7,6 +7,7 @@
 html,
 body {
   font-family: Roboto, "Helvetica Neue", Arial, "Segoe UI Symbol", "Noto Color Emoji";
+  // font-family: __Inter_0ec1f4, __Inter_Fallback_0ec1f4;
   height: 100%;
   width: 100%;
   background-color: #343541;
@@ -25,6 +26,7 @@ button {
   cursor: pointer;
   display: flex;
   align-items: center;
+  background: transparent;
 }
 
 // Sidebar //
@@ -44,15 +46,18 @@ button {
 
   .newchat-button {
     background-color: transparent;
+    border: 1px solid #ffffff33;
     width: 100%;
     display: flex;
     flex-shrink: 0;
     justify-content: flex-start;
     align-items: center;
     gap: 8px;
+    font-size: 15px;
+    font-family: inherit;
 
     &:hover {
-      background-color: #353131;
+      background-color: #6b72801a;
     }
   }
 
@@ -61,62 +66,67 @@ button {
     margin-top: 8px;
 
     .search-input {
+      border: 1px solid #ffffff33;
       width: 100%;
+      font-size: 14px;
+      line-height: 12px;
       color: #ffffff;
       background-color: transparent;
       padding: 12px 40px 12px 16px;
+
+      &::placeholder {
+        color: rgb(236, 234, 234);
+        opacity: 0.50;
+      }
     }
   }
 
   .chat {
-    background-color: #343541e6;
     border: 0;
     width: 100%;
     gap: 10px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-  }
 
-  .sidebar-content {
-    border: 1px solid #ffffff33;
-    border-radius: 5px;
-    font-size: 14px;
-    line-height: 1.25rem;
-    padding: 12px;
-    display: flex;
-    gap: 15px;
-    align-items: center;
-
-    .chat-text {
-      line-height: 0.75rem;
-      font-size: 12.5px;
-      padding-right: 3rem;
-      word-break: break-all;
-      white-space: nowrap;
-      text-overflow: ellipsis;
-      overflow: hidden;
-      max-height: 1.25rem;
-      position: relative;
-      right: 15px;
+    &:hover {
+      background-color: #343541e6;
+      cursor: pointer;
     }
   }
 
+  .sidebar-content {
+    border-radius: 5px;
+    line-height: 1.25rem;
+    padding: 12px;
+    display: flex;
+    gap: 13px;
+    align-items: center;
+
+    .chat-text {
+      line-height: 14px;
+      font-size: 13px;
+      padding-right: 3rem;
+      word-break: break-all;
+      white-space: nowrap;
+      position: relative;
+      right: 5px;
+    }
+  }           
+
   .buttons {
     display: flex;
-    color: #d1d5db;
 
     .delete-button {
       color: #a3a3a3;
       background-color: transparent;
       border: none;
       cursor: pointer;
-      font-size: 16px;
-      padding: 5px;
+      padding: 3px;
       border-radius: 5px;
 
       &:hover {
-        background-color: #c0392b;
+        color: #ffffff;
       }
     }
   }
@@ -137,6 +147,25 @@ button {
       display: flex;
       align-items: center;
       position: relative;
+    }
+
+    .no-data-message {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      color: white;
+      opacity: 0.50;
+      margin-top: 32px;
+    }
+
+    .no-data-size {
+      margin-bottom: 12px;
+    }
+
+    .no-data-text {
+      line-height: 24px;
+      font-size: 14px;
     }
   }
 }
@@ -176,20 +205,13 @@ header {
 
 .heading {
   justify-content: space-between;
-  background-color: #444654;
   color: #ffffff;
-  padding: 0 16px;
+  padding: 0 10px;
   height: 40px;
 }
 
-.close-button {
-  display: flex;
-  align-items: flex-start;
-  justify-content: end;
-  text-decoration: none;
-  color: white;
-  padding: 5px 16px;
-  transition: 0.3s;
+.title-heading {
+  font-weight: 600;
 }
 
 .hidden-part {
@@ -202,7 +224,7 @@ header {
 
 // Chat Conversions
 .chat-box {
-  max-width: 640px;
+  max-width: 750px;
   padding: 20px;
   margin: 0 auto;
   padding-bottom: 200px;
@@ -228,6 +250,8 @@ header {
     .profile-icon {
       height: 30px;
       width: 30px;
+      position: relative;
+      top: 3px;
     }
 
     .message-and-icon {
@@ -247,7 +271,7 @@ header {
     margin: 18px 0;
     width: 100%;
     height: 1px;
-    background-color: #616165
+    background-color: #616165;
   }
 }
 
@@ -268,18 +292,23 @@ header {
     margin: 0 auto;
 
     .parent-chat-box {
-      padding: 12px;
       color: #a1a1aa;
+      margin: 0 20px;
 
       .chat-input {
         border-radius: 6px;
         display: flex;
         align-items: center;
         padding: 12px;
+        height: 44px;
         background-color: #40414f;
-        border: none;
+        border: 1px solid #11182780;
         color: white;
         box-shadow: 0 0 #0000, 0 0 #0000, 0 0 15px #0000001a;
+
+        &:focus-within {
+          border: 1px solid white;
+        }
 
         textarea {
           flex: 1;
@@ -293,6 +322,7 @@ header {
           outline: 0;
           overflow-y: hidden;
           height: 22px;
+          font-family: inherit;
         }
 
         .button-send {
@@ -303,20 +333,18 @@ header {
       }
 
       .parent-box-text {
-        margin: auto;
-        display: flex;
-        justify-content: center;
-        margin-top: 15px;
+        text-align: center;
         line-height: 16px;
-        font-size: 0.75rem;
-        padding: 0 10px;
+        font-size: 12px;
+        line-height: 14px;
+        padding: 12px 16px 24px;
       }
     }
   }
 }
 
-@media (min-width: 640px) {
+@media (min-width: 750px) {
   .chat-input-container {
-    max-width: 640px;
+    max-width: 750px;
   }
 }
